--- a/index.html
+++ b/index.html
@@ -5,8 +5,117 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What?</title>
-    <script defer src="./js/index.js"></script>
 </head>
 <body>
+    <style>
+        :root {
+            --duration: 2s;
+        }
+
+        * {
+            box-sizing: border-box;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+                'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+                sans-serif;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            font-size: 12px;
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            text-decoration: none;
+            outline: none;
+        }
+
+        @keyframes background_ani {
+            0% {
+                transform: scaleY(1) scale(1) rotate(0deg);
+            }
+
+            17% {
+                transform: scaleY(1) scale(1) rotate(40deg);
+            }
+
+            34% {
+                transform: scaleY(1) scale(1) rotate(-40deg);
+            }
+
+            50% {
+                transform: scaleY(2) scaleX(1.25) rotate(0deg);
+            }
+
+            100% {
+                transform: scaleY(1) scaleX(1);
+            }
+        }
+
+        html, body {
+            background: linear-gradient(red, blue, green, red);
+            font-size: 12px;
+            height: 100vh;
+            width: 100vw;
+            overflow: hidden;
+        }
+
+        .container {
+            background: linear-gradient(red, blue, green, red);
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        button {
+            cursor: pointer;
+        }
+
+        .animate_bg {
+            animation: background_ani cubic-bezier(0.155, 0.82, 0.175, 1) 2s;
+        }
+
+        #click_me {
+            text-align: center;
+            vertical-align: center;
+            color: white;
+            background: #e33d96;
+            font-size: 6rem;
+            height: 60vh;
+            width: 60vh;
+            border-radius: 50%;
+            border: 1rem solid #be2376;
+            transition: all 1s cubic-bezier(0.155, 0.82, 0.175, 1);
+        }
+
+        #click_me:hover {
+            background: #cd2880;
+            border: .5rem solid #e33d96;
+            transform: rotate(360deg);
+        }
+
+
+    </style>
+    
+    <div class="container">
+        <button 
+            id="click_me"
+        >Кликни</button>
+    </div>
+
+
+    <script>
+        const clickBtnElement = document.querySelector('#click_me')
+        const containerElement = document.querySelector('.container')
+
+        const clickClickBtnElementHandler = event => {
+            if (containerElement.classList.contains('animate_bg')) {
+                return
+            }
+
+            containerElement.classList.add('animate_bg')
+            setTimeout(() => containerElement.classList.remove('animate_bg'), 2000)
+        }
+
+        clickBtnElement.addEventListener('click', clickClickBtnElementHandler)
+    </script>
 </body>
 </html>
